<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sell_standard"
        android:text="@string/sell_standard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sell_concession"
        android:text="@string/sell_concession_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sell_under_fifteen"
        android:text="@string/sell_under_fifteen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sell_under_three"
        android:text="@string/sell_under_three_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sell_family"
        android:text="@string/sell_family_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sell_group"
        android:text="@string/sell_group_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>