<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buy_peanuts"
        android:text="@string/buy_peanuts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buy_meat"
        android:text="@string/buy_meat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buy_grains"
        android:text="@string/buy_grains_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buy_bird_feed"
        android:text="@string/buy_bird_feed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>